# ai-learning

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: airline_assistant.py
audio/: meeting-minutes.py
chat/: chatbot.py  joke_telling.py  llm_to_llm.py
code_conversion/: optimized  optimized.cpp  pie_conversion.py  ui.py
finetuning/: dataset.py  dataset_small.py  fine_tuning_llama.py  frontier_tuning.py  inference.py  items.py  loaders.py
rag/: chat_rag_chroma.py
tasks/: brochure.py  summarizer.py
