[tool.poetry]
name = "ai-learning"
version = "0.1.0"
description = "Learning AI Stuff"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.11"
bs4 = "^0.0.2"
ipython = "^9.2.0"
dotenv = "^0.9.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
openai = "^1.78.0"
display = "^1.0.0"
anthropic = "^0.51.0"
gradio = "^5.29.0"
huggingface-hub = "^0.31.2"
transformers = "^4.51.3"
torch = "^2.7.0"
hachoir = "^3.3.0"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.18"
langchain-chroma = "^0.2.4"
scikit-learn = "^1.6.1"
plotly = "^6.1.1"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
